--- a/styles.css
+++ b/styles.css
@@ -85,11 +85,12 @@ mux-player {
   height: 100%;
   background-color: black;
   z-index: 1000;
-  overflow-y: scroll; /* Enable vertical scrolling */
+  overflow-y: auto; /* Enable vertical scrolling */
   display: flex;
   flex-direction: column;
   align-items: center;
   scroll-snap-type: y mandatory; /* Snap scrolling */
+  -webkit-overflow-scrolling: touch; /* Smooth scrolling on iOS */
 }
 
 .fullscreen-video-container {
