--- a/styles.css
+++ b/styles.css
@@ -78,12 +78,18 @@ body, html {
 
 .fullscreen-video-container {
   height: 100vh; /* Full viewport height */
+  width: 100vw; /* Full viewport width */
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 56.25vh; /* 9/16 aspect ratio */
-  scroll-snap-align: center; /* Snap earlier */
+  scroll-snap-align: start; /* Snap earlier */
   background-color: grey; /* Placeholder background color */
+}
+
+.fullscreen-video {
+  height: 100%;
+  width: auto;
+  max-width: 100%;
 }
 
 .close-button {
